--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,9 @@
 # A * ensures that everything will be ignored.
 #*
 
-# exclude everything
+# exclude
 secrets/config.json
 secrets/vars.env
 
-# exception to the rule
-!secrets/.gitkeep
+
+
